--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,10 @@
             <!--<version>${jodatime-hibernate.version}</version>-->
         <!--</dependency>-->
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
