--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.profiles.active: dev
 #amadeusounds
 amadeusounds.songs.latest.days=10
 amadeusounds.songs.latest.max-results=6
+amadeusounds.songs.top-rated.max-results=6
 
 #json
 #very important
