--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 # Logging
-#log4j.logger.org.hibernate.SQL=DEBUG
-#log4j.logger.org.hibernate.type=TRACE
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type=TRACE
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
