--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>spring-beans</artifactId>
             <version>4.3.0.BUILD-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.4.0.BUILD-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
